openEuler_test/update_test/kernel/kernel-ltp执行cve-2025-21756失败.txt
# 标题
kernel “ltp执行cve-2025-21756失败”

# 基本信息
- 测试用例: cve-2025-21756
- 系统版本: openEuler-24.03-LTS-SP3、openEuler-24.03-LTS-SP2、openEuler-24.03-LTS-SP1、openEuler-24.03-LTS(aarch64、x86)

# 问题现象
ltp测试执行过程中，报错：cve-2025-21756.c:38: TBROK: bind() error: EADDRNOTAVAIL (99)

# 错误日志
```
<<<test_output>>>
incrementing stop
tst_test.c:2047: TINFO: LTP version: 20260130
tst_test.c:2050: TINFO: Tested kernel: 6.6.0-144.0.0.140.oe2403sp2.x86_64 #1 SMP Wed Mar 25 21:58:45 CST 2026 x86_64
tst_kconfig.c:88: TINFO: Parsing kernel config '/proc/config.gz'
tst_test.c:1875: TINFO: Overall timeout per run is 0h 00m 30s
cve-2025-21756.c:38: TBROK: bind() error: EADDRNOTAVAIL (99)


```

# 问题根因
1. cve-2025-21756用例依赖 vsock_loopback.ko，当前未加载vsock_loopback

# 解决方案
1. 执行 modprobe vsock_loopback 加载ko后，用例成功